feat: 添加项目使用说明

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -15,7 +15,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>electron-app</title>
+		<title>{electron-app}</title>
 	</head>
 
 	<body>
